--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@types/uuid": "^9.0.2",
+    "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
