--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.0",
+    "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
