--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@lexical/react": "^0.11.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -32,6 +33,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.9",
+    "lexical": "^0.11.2",
     "lucide-react": "^0.257.0",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
