--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": false,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "styles/globals.css",
+    "css": "styles/index.css",
     "baseColor": "slate",
     "cssVariables": false
   },
