--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.1",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.14.0",
     "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
@@ -54,6 +55,7 @@
     "@types/node": "^20.3.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-resizable": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
