--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.1.1",
     "@lexical/react": "^0.11.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -34,6 +36,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.9",
+    "emoji-mart": "^5.5.2",
     "lexical": "^0.11.2",
     "lucide-react": "^0.257.0",
     "mobx": "^6.9.0",
