--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.10",
     "react-hook-form": "^7.45.1",
