--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap-icons": "^1.10.5",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "dayjs": "^1.11.9",
     "emoji-mart": "^5.5.2",
     "lexical": "^0.11.2",
