basic implementation of sentry for production use

--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,2 @@
 VITE_API_URL=https://api.spa-rx.ca:3000
+SENTRY_DSN=https://c1a87b7795ffab832951320a92f97a55@o4505864940879872.ingest.sentry.io/4505865172746240
