--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@sentry/react": "^7.68.0",
+    "@sentry/tracing": "^7.68.0",
     "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
