--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
