--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.1.1",
     "@lexical/react": "^0.12.5",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -24,7 +23,6 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -32,17 +30,13 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@sentry/react": "^7.68.0",
-    "@sentry/tracing": "^7.68.0",
-    "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
-    "bootstrap-icons": "^1.10.5",
+    "npm": "^1.10.5",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
-    "cmdk": "^0.2.0",
     "date-fns": "^3.5.0",
     "dayjs": "^1.11.9",
     "emoji-mart": "^5.5.2",
@@ -66,7 +60,6 @@
     "recharts": "^2.10.3",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
